# hearts-engine

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: pages.yml  rust.yml
benches/: decision.rs
examples/: arena.rs  play.rs  tune.rs  vs_cfr.rs
src/: driver.rs  heuristic.rs  lib.rs  mc.rs  strategy.rs  view.rs
tests/: driver.rs  proptest.rs  strength.rs  view.rs
tournament/: README.md
tournament/CfrShim/: CfrShim.fsproj  Program.fs
web/: .gitignore  Cargo.toml  README.md  app.js  index.html  style.css
web/src/: lib.rs
